deal with tile info alignment (bug 1002905)

--- a/hearth/media/css/yogafire.styl
+++ b/hearth/media/css/yogafire.styl
@@ -169,3 +169,45 @@ active_category() {
         border: 0;
     }
 }
+
+.listing .mkt-tile {
+    h3.tight {
+        padding-bottom: 5px;
+    }
+    .button {
+        bottom: -4px;
+    }
+    .info {
+        left: 84px;
+        position: absolute;
+        width: 217px;
+    }
+    .subdetail.content-rating {
+        margin-bottom: -4px;
+        padding-bottom: 0;
+    }
+    .subdetail {
+        max-width: 110px;
+    }
+}
+
+.listing.product-details .mkt-tile {
+    height: 110px;
+    .info {
+        min-height: 90px;
+    }
+    h3.tight {
+        padding-bottom: 10px;
+    }
+    .rating {
+        bottom: 10px;
+        left: -74px;
+        position: absolute;
+        .cnt {
+            top: 1px;
+        }
+    }
+    .button {
+        bottom: 10px;
+    }
+}
